[gd_scene load_steps=23 format=2]

[ext_resource path="res://art/textures/wheel1.png" type="Texture" id=1]
[ext_resource path="res://art/textures/light.png" type="Texture" id=2]
[ext_resource path="res://scripts/cars/driftEffectRaycast.gd" type="Script" id=3]
[ext_resource path="res://art/3D/wheels/wheel1.obj" type="ArrayMesh" id=4]
[ext_resource path="res://art/audio/sfx/carEngine2.ogg" type="AudioStream" id=5]
[ext_resource path="res://art/audio/sfx/skid.ogg" type="AudioStream" id=6]
[ext_resource path="res://scenes/effects/smoke.tscn" type="PackedScene" id=7]
[ext_resource path="res://art/materials/fireParticles.material" type="Material" id=8]
[ext_resource path="res://art/audio/sfx/carCrash.wav" type="AudioStream" id=9]
[ext_resource path="res://scripts/cars/carBehaviour.gd" type="Script" id=10]

[sub_resource type="BoxShape" id=14]
extents = Vector3( 2.37026, 0.759428, 0.871071 )

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 1 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1.05613, 0.808912, 2.77229 )

[sub_resource type="ParticlesMaterial" id=5]
direction = Vector3( 0, 0, 0 )
spread = 18.5
gravity = Vector3( 0, 0, 0 )
initial_velocity = 3.0
scale = 0.2

[sub_resource type="SphereMesh" id=6]

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0.356742, 1 )
colors = PoolColorArray( 1, 0.65332, 0, 1, 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0.271768, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.588636 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 1
emission_sphere_radius = 0.5
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 3, 0 )
radial_accel = 1.0
radial_accel_random = 1.0
tangential_accel = 2.0
tangential_accel_random = 1.0
angle = 180.0
angle_random = 1.0
scale_curve = SubResource( 10 )
color_ramp = SubResource( 8 )

[sub_resource type="SphereMesh" id=12]
material = ExtResource( 8 )
radius = 0.5
height = 1.0
radial_segments = 16
rings = 8

[sub_resource type="BoxShape" id=13]
extents = Vector3( 0.0905082, 0.240275, 0.277489 )

[node name="car" type="Spatial"]

[node name="vehicle" type="VehicleBody" parent="."]
collision_layer = 2
collision_mask = 58
gravity_scale = 1.53
angular_damp = 0.0
script = ExtResource( 10 )

[node name="body" type="Spatial" parent="vehicle"]

[node name="seatLeft" type="Position3D" parent="vehicle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.743488, 0 )

[node name="PinJoint" type="PinJoint" parent="vehicle/seatLeft"]

[node name="seatRight" type="Position3D" parent="vehicle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.743488, 0 )

[node name="PinJoint" type="PinJoint" parent="vehicle/seatRight"]

[node name="getInCar" type="Area" parent="vehicle"]

[node name="CollisionShape" type="CollisionShape" parent="vehicle/getInCar"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.743488, 0 )
shape = SubResource( 14 )

[node name="wheelFrontLeft" type="VehicleWheel" parent="vehicle"]
transform = Transform( 1, 0, 0, 0, 1, -1.74846e-07, 0, 1.74846e-07, 1, 0.998169, 0.216448, 1.40779 )
use_as_traction = true
use_as_steering = true
suspension_travel = 50.0
suspension_stiffness = 30.0
damping_compression = 1.4
damping_relaxation = 1.5

[node name="MeshInstance" type="MeshInstance" parent="vehicle/wheelFrontLeft"]
transform = Transform( -2.18557e-08, 0.5, 0, -0.5, -2.18557e-08, 0, 0, 0, 0.5, 0.1, 0, 0 )
mesh = ExtResource( 4 )
material/0 = SubResource( 1 )

[node name="wheelFrontRight" type="VehicleWheel" parent="vehicle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.216452, 1.4 )
use_as_traction = true
use_as_steering = true
suspension_travel = 50.0
suspension_stiffness = 30.0
damping_compression = 1.4
damping_relaxation = 1.5

[node name="MeshInstance4" type="MeshInstance" parent="vehicle/wheelFrontRight"]
transform = Transform( 8.14603e-08, -0.5, -1.62921e-07, -0.5, -8.14603e-08, 0, -2.65431e-14, 1.62921e-07, -0.5, -0.1, 0, 0 )
mesh = ExtResource( 4 )
material/0 = SubResource( 1 )

[node name="wheelBackLeft" type="VehicleWheel" parent="vehicle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.216452, -1.4 )
use_as_traction = true
suspension_travel = 50.0
suspension_stiffness = 30.0
damping_compression = 1.4
damping_relaxation = 1.5

[node name="MeshInstance3" type="MeshInstance" parent="vehicle/wheelBackLeft"]
transform = Transform( -2.18557e-08, 0.5, 0, -0.5, -2.18557e-08, 0, 0, 0, 0.5, 0.1, 0, 0 )
mesh = ExtResource( 4 )
material/0 = SubResource( 1 )

[node name="wheelBackRight" type="VehicleWheel" parent="vehicle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.216452, -1.4 )
use_as_traction = true
suspension_travel = 50.0
suspension_stiffness = 30.0
damping_compression = 1.4
damping_relaxation = 1.5

[node name="MeshInstance2" type="MeshInstance" parent="vehicle/wheelBackRight"]
transform = Transform( 8.14603e-08, -0.5, -1.62921e-07, -0.5, -8.14603e-08, 0, -2.65431e-14, 1.62921e-07, -0.5, -0.1, 0, 0 )
mesh = ExtResource( 4 )
material/0 = SubResource( 1 )

[node name="driftEffectRaycasts" type="Spatial" parent="vehicle"]

[node name="RayCast1" type="RayCast" parent="vehicle/driftEffectRaycasts"]
transform = Transform( 1, 0, 0, 0, 1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 0, 0 )
enabled = true
script = ExtResource( 3 )

[node name="RayCast2" type="RayCast" parent="vehicle/driftEffectRaycasts"]
enabled = true
script = ExtResource( 3 )

[node name="RayCast3" type="RayCast" parent="vehicle/driftEffectRaycasts"]
enabled = true
script = ExtResource( 3 )

[node name="RayCast4" type="RayCast" parent="vehicle/driftEffectRaycasts"]
enabled = true
script = ExtResource( 3 )

[node name="collision" type="CollisionShape" parent="vehicle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.04659, 0 )
shape = SubResource( 2 )

[node name="camPos" type="Position3D" parent="vehicle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.45624, -5.90873 )

[node name="backLightSprite1" type="Sprite3D" parent="vehicle"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.6, 0.72, -2.2 )
texture = ExtResource( 2 )

[node name="backLightSprite2" type="Sprite3D" parent="vehicle"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.6, 0.72, -2.2 )
texture = ExtResource( 2 )

[node name="backLight1" type="OmniLight" parent="vehicle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, 0.712668, -2.5 )
light_color = Color( 0, 0, 0, 1 )
omni_range = 1.45512

[node name="backLight2" type="OmniLight" parent="vehicle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, 0.712668, -2.5 )
light_color = Color( 0, 0, 0, 1 )
omni_range = 1.45512

[node name="driftSmokeLeft" type="Particles" parent="vehicle"]
transform = Transform( -1, 0, -8.74228e-08, -4.37114e-08, 0.866025, 0.5, 7.57103e-08, 0.5, -0.866025, 0.943781, -0.238734, -1.83095 )
emitting = false
amount = 40
lifetime = 0.6
local_coords = false
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 6 )

[node name="driftSmokeRight" type="Particles" parent="vehicle"]
transform = Transform( -1, 0, -8.74228e-08, -4.37114e-08, 0.866025, 0.5, 7.57103e-08, 0.5, -0.866025, -0.961504, -0.238734, -1.83095 )
emitting = false
amount = 40
lifetime = 0.6
local_coords = false
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 6 )

[node name="fire" type="Particles" parent="vehicle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.938687, 1.66054 )
cast_shadow = 0
emitting = false
amount = 50
process_material = SubResource( 11 )
draw_pass_1 = SubResource( 12 )

[node name="smoke" parent="vehicle" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.938687, 1.66054 )
emitting = false
amount = 100
lifetime = 0.5
speed_scale = 3.0
local_coords = false

[node name="drift" type="AudioStreamPlayer3D" parent="vehicle"]
stream = ExtResource( 6 )
autoplay = true

[node name="engine" type="AudioStreamPlayer3D" parent="vehicle"]
stream = ExtResource( 5 )
autoplay = true

[node name="crash" type="AudioStreamPlayer3D" parent="vehicle"]
stream = ExtResource( 9 )
unit_db = 10.0

[node name="AI" type="Spatial" parent="vehicle"]

[node name="checkpoint" type="RayCast" parent="vehicle/AI"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.688144, 2.5947 )
cast_to = Vector3( 0, 0, 0 )

[node name="front" type="RayCast" parent="vehicle/AI"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.688144, 2.5947 )
cast_to = Vector3( 0, 0, 8 )

[node name="left" type="RayCast" parent="vehicle/AI"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.688144, 2.5947 )
cast_to = Vector3( 3, 0, 8 )

[node name="right" type="RayCast" parent="vehicle/AI"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.688144, 2.5947 )
cast_to = Vector3( -3, 0, 8 )

[node name="hasFloorInFront" type="RayCast" parent="vehicle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03763, 4.51439 )
enabled = true
cast_to = Vector3( 0, -1.878, 0 )
collision_mask = 16

[node name="joints" type="Spatial" parent="."]

[node name="frontLeftDoor" type="RigidBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="frontLeftDoor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.604755, 0 )
visible = false
shape = SubResource( 13 )
disabled = true

[node name="frontRightDoor" type="RigidBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="frontRightDoor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.604755, 0 )
visible = false
shape = SubResource( 13 )
disabled = true

[node name="backLeftDoor" type="RigidBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="backLeftDoor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.604755, 0 )
visible = false
shape = SubResource( 13 )
disabled = true

[node name="backRightDoor" type="RigidBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="backRightDoor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.604755, 0 )
visible = false
shape = SubResource( 13 )
disabled = true

[connection signal="body_entered" from="vehicle/getInCar" to="vehicle" method="_on_getInCar_body_entered"]
[connection signal="body_exited" from="vehicle/getInCar" to="vehicle" method="_on_getInCar_body_exited"]
